# OS

./: .gitignore  CMakeLists.txt  README.md  loader.asm  makefile  temp.S  tool.sh
device/: timer.c
include/: bitmap.h  boot.inc  chopsticks.h  console.h  dir.h  fs.h  global.h  ide.h  inode.h  interrupt.h  io.h  ioqueue.h  keyboard.h  memory.h  philosopher.h  print.h  process.h  rand.h  stdio-kernel.h  super_block.h  sync.h  syscall.h  thread.h  thread_list.h  timer.h  tss.h
kernel/: .interrupt.c.swp  debug.c  debug.h  global.h  init.c  interrupt.c  interrupt.h  kernel.asm  main.c  memory.c  memory.h  test.c
lib/: CMakeLists.txt  conclusion.md  memory.h  stdint.h  stdio.c  stint.h  string.c  string.h
lib/kernel/: bitmap.c  io.h  memory.c  print.asm  print.c  print.h  rand.c  stdio-kernel.c  string.h  switch.asm  sync.c  thread.c  thread_list.c  tool.c
lib/sys/: print.asm
lib/user/: syscall.c
src/: test.cpp
src/boot/: loader.asm
src/boot/include/: boot.inc
src/device/: console.c  ide.c  ioqueue.c  keyboard.c  timer.c
src/fs/: fs.c  inode.c
src/kernel/: debug.c  init.c  interrupt.c  kernel.asm  main.c  memory.c  thread.c
src/test/: chopsticks.c  philosopher.c
src/user/: process.c  syscall-init.c  tss.c
