CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(OS C)
SET(CMAKE_C_STANDARD 99)
#添加头文件
INCLUDE_DIRECTORIES(INCLUDE)
##查找SRC目录下所有的源文件
AUX_SOURCE_DIRECTORY(src/kernel KERNEL_SRC)
AUX_SOURCE_DIRECTORY(src/device DEVICE_SRC)
AUX_SOURCE_DIRECTORY(src/boot BOOT_SRC)
AUX_SOURCE_DIRECTORY(src/test TEST_SRC)
AUX_SOURCE_DIRECTORY(src/user USER_SRC)

##添加子目录
ADD_SUBDIRECTORY(lib)
#生成目标文件
ADD_EXECUTABLE(KERNEL ${KERNEL_SRC} ${DEVICE_SRC} ${BOOT_SRC} ${TEST_SRC} ${USER_SRC})
#添加所有的链接库
TARGET_LINK_LIBRARIES(KERNEL ALL_LIB)


#project(test)
#
#add_executable(test src/test.cpp)